--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <title>Shopping App</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     </head>
     <body>
-        <h1>Shopping List</h1>
+        <nav>
+            <div class="na-wrapper">
+                <a class="brand-logo center">Shopping List</a>
+            </div>
+        </nav>
         <ul></ul>
     </body>
     <script>
@@ -12,15 +17,28 @@
         const {ipcRenderer} = electron;
         const ul = document.querySelector('ul');
 
+        // Addd item
         ipcRenderer.on('item:add',(e,item) => {
+            ul.className = 'collection';
             const li = document.createElement('li');
+            li.className = 'collection-item';
             const itemText = document.createTextNode(item);
             li.appendChild(itemText);
             ul.appendChild(li);
         });
 
+        // Clear items
         ipcRenderer.on('item:clear',() => {
             ul.innerHTML = "";
         });
+
+        // Remove item
+        ul.addEventListener('dblclick',removeItem);
+        function removeItem(e){
+            e.target.remove();
+            if(ul.children.length === 0){
+                ul.className = '';
+            }
+        }
     </script>
 </html>
